<resources>
    <string name="app_name">TokoZakaria</string>
    <string name="nama_toko">Toko Zakaria</string>
    <string name="barang">Barang</string>
    <string name="keuntungan">Keuntungan</string>
    <string name="Kasir">Kasir</string>
    <string name="title_activity_barang">Barang</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="harga">Harga</string>
    <string name="stock">Stock</string>
    <string name="submit">SUBMIT</string>
    <string name="supplier_information">Supplier Information</string>
    <string name="nama_supplier">Nama Supplier</string>
    <string name="emailatauhp">Email/No.Hp</string>
    <string name="kategori">Kategori</string>
    <string name="update">Update</string>
    <string name="product_detail">Product Detail</string>
    <string name="upload">Upload</string>
    <string-array name="kategori">
        <item>Pilih Kategori</item>
        <item>Beras</item>
        <item>Gula</item>
        <item>Sagu</item>
        <item>Minyak</item>
        <item>Terigu</item>
        <item>Lainnya</item>
    </string-array>
</resources>