<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
    android:background="@drawable/bg"
    android:weightSum="10"
    tools:context=".MainActivity">

    <!--Layout Judul-->
    <RelativeLayout
        android:layout_weight="2.6"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal">

        <!--Judul-->
        <TextView
            android:id="@+id/namatoko"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/nama_toko"
            android:textColor="@color/white"
            android:textSize="42sp" />

    </RelativeLayout>

    <!--Layout grid untuk cardview-->
    <GridLayout
        android:id="@+id/maingrid"
        android:rowCount="2"
        android:columnCount="2"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:layout_weight="6.5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="15dp">

        <!--Card view row 1-->
        <!--Column 1-->
        <androidx.cardview.widget.CardView
            android:id="@+id/barang"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="30dp"
            android:layout_rowWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

            <!--Layout -->
            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/product"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="100dp"
                    android:layout_height="100dp"/>

                <TextView
                    android:textAlignment="center"
                    android:text="@string/barang"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <!--Column 1 selesai-->

        <!--Column 2-->
        <androidx.cardview.widget.CardView
            android:id="@+id/keuntungan"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="30dp"
            android:layout_rowWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/profit"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="100dp"
                    android:layout_height="100dp"/>

                <TextView
                    android:textAlignment="center"
                    android:text="@string/keuntungan"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <!--Column 2 selesai-->
        <!--Row 1 selesai-->

        <!--Row 2-->
        <!--Column 1-->
        <androidx.cardview.widget.CardView
            android:id="@+id/penjualan"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="30dp"
            android:layout_rowWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/jualan"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="100dp"
                    android:layout_height="100dp"/>

                <TextView
                    android:textAlignment="center"
                    android:text="@string/Kasir"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <!--Column 2 selesai-->
        <!--Row 2 selesai-->

    </GridLayout>
    <!--GridLayout selesai-->

</LinearLayout>